--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>PWA example</title>
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="canonical" href="https://is-t51.github.io/pwa/" />
-  <link rel="icon" type="image/png" href="./img/96x96.png" />
-  <link rel="manifest" href="./manifest.json">
+  <link rel="icon" type="image/png" href="/pwa/img/96x96.png" />
+  <link rel="manifest" href="/pwa/manifest.json">
 
   <meta name="theme-color" content="#ff831c" />
 
   <!-- iOS -->
-  <link rel="apple-touch-icon" href="./img/96X96.png" />
+  <link rel="apple-touch-icon" href="/pwa/img/96X96.png" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-status-bar-style" content="black" />
   <meta name="mobile-web-app-title" content="PWA example" />
