Added version to INDEX

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <body>
   <h1>PWA example</h1>
     …
+    version_002
+    …
   <script>
       if (navigator.serviceWorker) {
         navigator.serviceWorker.register (
